syntax = "proto3";

message EndPipelineProtoMsg {
    string pipelineName = 1;
}